- Improved the framework for meta data visualization.
- Finalized MzML implementation (version 1.10)
  - previously unsupported parts
  - index MzML
  - semantic validation
  - correctly handling of nativeID for all formats
- Meta data: Several extensions to the meta data handling classes for mzML compliance.

New features and improvements of TOPP:
- Added SILACAnalyzer: A specialized tool for quantitation of SILAC experiments (contributed by Lars Nilse).
- Added ITRAQAnalyzer: A specialized tool for quantitation of ITRAQ experiments.
- Added IDMapper: Assigns protein/peptide identifications to features or consensus features.
- FeatureLinker: Added automated RT parameter estimation for 'labeled' algorithm.
- Resampler: This tool is now used for resampling raw data instead of resampling in NoiseFilter or BaselineFilter.
- FileInfo: The option '-v' now also does a semantic validation of MzML files.
- FileMerger: Improved interface
- ConsensusID: Now also supports consensus identification of features and consensus features.

New features and improvements of TOPPView:
- Added functionality for editing feature data

Changes to OpenMS XML formats:
- ParamXML:
  - Restrictions in Param .ini files are represented by 'min:max' instead
    of 'min-max' now, to avoid issues with small (1e-06) and negative numbers.
  - Replaced 'advanced' attribute by the more general 'tags' attribute.
  - Added support for float, int and string lists
- featureXML:
  - Added tag <subordinate> to store competing features that did not qualify for the final map
  - Removed <description> section
  - Added document Id
  - Added protein and peptide information
- consensusXML:
	- Added document Id
	- Added protein and peptide information

Changes to the contrib package:
- Updated SeqAn package to revision 2666 (this fixes the STL debug error)

Detailed list of changes to specific OpenMS classes:
- Renamed and moved classes
  - Renamed MSMetaDataExplorer to MetaDataBrowser