@@ -298,7 +298,7 @@ namespace OpenMS
 	}
 
 	/// The general template definition will force a compile-time error if FloatingPointType is in fact not a floating point type.  Only the template specializations for float, double, long double shall be used.
- 	template <typename FloatingPointType> inline Int writtenDigits(const FloatingPointType& /* unused */ = FloatingPointType())
+ 	template <typename FloatingPointType> inline Int writtenDigits(const FloatingPointType&)
 	{
 		// Self-explanatory compile time error!
 		return FloatingPointType::Sorry_but_writtenDigits_is_designed_to_work_for_floating_point_types_only;
